<resources>
    <string name="app_name">SAP BI</string>
    <string name="osnotsupported">This application is not supported for above Android 4.4 Version</string>
    <string name="osdeprecated">This application is not supported on Android 2.2 Version</string>
    <string name="oshoneycombnotsupported">%1$s app is compatible with android OS version 4.0 and above.</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="browse">Browse</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="add_new_cnx">Add Connection</string>
    <string name="import_txt">Import</string>
    <string name="new_txt">"New"</string>
    <string name="alias">Alias</string>
    <string name="add_alias">Add Alias</string>
    <string name="enter_alias">Enter the Alias</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="xc_pin_unpin">Pin/Unpin</string>
    <string name="xc_fit_to_screen">Fit to Screen</string>
    <string name="done">Done</string>
    <string name="previous">Previous</string>
    <string name="view_instance_title">View Document Instance</string>
    <string name="categories">Categories</string>
    <string name="searchresults">Search results</string>
    <string name="send_options">Send Screenshot via:</string>
    <string name="send_cnx_options">"Share connection via:"</string>
    <string name="skip">Skip</string>
    <string name="sampledoc_header">Sample Documents</string>
    <string name="create_new_cnx_desc1">and browse your documents.</string>
    <string name="create_new_cnx_desc2">You can also do this from Settings screen.</string>
    <string name="versionNumber" translatable="false">6.2.16</string>
    <string name="buildNumber" translatable="false">1608</string>
    <string name="changeListNumber" translatable="false">000000</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_reject">Reject</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="eula_mobi_updates"></string>
    <string name="paint">Paint</string>
    <string name="erase">Erase</string>
    <string name="customview">CustomView</string>
    <string name="crop">Crop</string>
    <string name="blur">Blur</string>
    <string name="record">Record a Voice Memo</string>
    <string name="recording">Recording...</string>
    <string name="not_recording">Ready to Record...</string>
    <string name="playing">Playing...</string>
    <string name="recorded_file_deleted">The recorded file is deleted.</string>
    <string name="recorded_file_attached">The recorded file will be attached in the email.</string>
    <string name="recorded_file_not_attached">There is no recorded file for attachment.</string>
    <string name="orientation_lock">Orientation locked!! You cannot change device orientation while annotating a report.</string>
    <string name="orientation_unlock">Orientation unlocked</string>
    <string name="annotations">Annotation</string>
    <string name="imageeditor_title">Image Editor</string>
    <string name="custom_view" translatable="false">textbox</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="add_home">Add Home</string>
    <string name="pv_create_title">Save View</string>
    <string name="personal_view_category">Personal Views</string>
    <string name="personal_view_create">Personal View</string>
    <string name="pv_name">Personal View Name</string>
    <string name="pv_description">Personal View Description</string>
    <string name="refresh">Refresh</string>
    <string name="filter_menu">Filter</string>
    <string name="report_part_filter_menu">ReportPart Filter</string>
    <string name="email_menu">Email</string>
    <string name="grid_menu">Grid</string>
    <string name="change_view">Change View</string>
    <string name="xc_hideToolBar">Hide toolBar</string>
    <string name="xc_fitToScreen">Fit to screen</string>
    <string name="sections">Sections</string>
    <string name="existing_conn_header">Existing Connections</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="doc_info_header">Document Information</string>
    <string name="author">Author</string>
    <string name="parent_doc_name">Parent Doc Name</string>
    <string name="sender">Sender</string>
    <string name="downloaded_at">Downloaded at</string>
    <string name="modified_at">Modified at</string>
    <string name="sent_at">Sent at</string>
    <string name="description">Description</string>
    <string name="document_delete">Document will be deleted on</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="view_instance">View Instance</string>
    <string name="info">Info</string>
    <string name="remove_document">Remove from Device</string>
    <string name="add_to_device">Add to Device</string>
    <string name="days">days</string>
    <string name="day">day</string>
	<string name="authored_by">Author</string>
	<string name="expires_in">Expires in</string>
    <string name="connection_server_URL">Connection Server URL</string>
    <string name="url_start_string">http://</string>
    <string name="connection">New Connection</string>
    <string name="enter_valid_url">Please enter a valid URL</string>
    <string name="reset_cmd">Reset</string>
    <string name="share_connection">Share</string>
    <string name="save_cmd">Save</string>
    <string name="save_password">Save Password</string>
    <string name="additional_authcred">Additional Authentication Credentials</string>
    <string name="cms">CMS</string>
    <string name="mobile_server_URL">Mobile Server URL</string>
    <string name="enter_server_url">Enter Server URL</string>
    <string name="choose_connection">Choose Connection</string>
    <string name="required">Required</string>
    <string name="connection_name">Connection Name</string>
    <string name="user_name">User Name</string>
    <string name="auth_type">Authentication Type</string>
    <string name="remember_pwd">Remember Password</string>
    <string name="set_as_default">Default Connection</string>
    <string name="offline_connection">Cannot import connections in offline mode</string>
    <string name="snapshot_drill">This drill operation is not saved</string>
    <string name="snapshot_hierarchy">Hierarchy operation is not supported for personal view documents</string>
    <string name="snapshot_rel">Report element linking operation is not supported for personal view documents</string>
    <string name="snapshot_opendoc">Open document URL operation is not supported for personal view documents</string>
    <string name="snapshot_name_exists">Specify a different name; the name already exists for a different personal view</string>
    <string name="drill_from">from</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deregister">Deregister</string>
    <string name="password">Password</string>
    <string-array name="auth_types" translatable="false">
        <item>Enterprise</item>
        <item>LDAP</item>
        <item>Windows AD</item>
        <item>SAP R3</item>
    </string-array>
    <string-array name="auth_types_values" translatable="false">
        <item>secEnterprise</item>
        <item>secLDAP</item>
        <item>secWinAD</item>
        <item>secSAPR3</item>
    </string-array>
    <string name="connection_options">Options</string>
    <string name="display_help_page">Display Help Page</string>
    <string name="view_doc">View Document</string>
    <string name="generic_error">Unable to process the request. Try again later.</string>
    <string name="mesg_already_downloaded">This document is already downloaded.</string>
    <string name="mesg_document_downloading">Document download has been triggered.</string>
    <string name="mesg_download_in_progress">Operation cannot be performed; download is in progress</string>
    <string name="unknown_document_type">Select document is unknown type.</string>
    <string name="doc_metadata_not_found">Document information not found.</string>
    <string name="save_error_string">Please enter the information in required fields</string>
    <string name="cnx_name_already_exists">This connection name already exists</string>
    <string name="no_filters_saved">No Filters saved</string>
    <string name="doc_not_found">Unable to open the document</string>
    <string name="unable_to_drill">Unable to drill the document</string>
    <string name="document_no_category">Document is not assigned to any Mobile Category</string>
    <string name="mesg_opening_document">Opening document...</string>
    <string name="mesg_opening_report">Opening report...</string>
    <string name="mesg_downloading_pending_reports">Downloading. Please wait...</string>
    <string name="mesg_syncing_with_server">Syncing with server...</string>
    <string name="mesg_processing_data">Processing data...</string>
    <string name="mesg_getting_prompts">Fetching prompts...</string>
    <string name="mesg_filtering_document">Filtering the document...</string>
    <string name="mesg_clearing_filters">Clearing filters...</string>
    <string name="mesg_prompt_document">Applying prompts to the document...</string>
    <string name="mesg_lov_document">Fetching list of values...</string>
    <string name="mesg_getting_content">Receiving contents from the server.</string>
    <string name="mesg_dowloading_document_offline">Downloading the document to Home...</string>
    <string name="mesg_logoff">Logging off. Please wait...</string>
    <string name="mesg_xcelsius_initialize">Initializing</string>
    <string name="mesg_xcelsius_load">Loading</string>
    <string name="mesg_xcelsius_documentuncompatible">The linking document is uncompatible with current application and cannot be displayed</string>
    <string name="pg_show_server_call">Getting details from the server...</string>
    <string name="mesg_drill_up_document">Drilling up ...</string>
    <string name="mesg_drill_down_document">Drilling down ...</string>
    <string name="register_with_sup">Registering with SUP...</string>
    <string name="deregister_with_sup">Deregistering with SUP...</string>
    <string name="login_mesg">Logging in. Please wait ...</string>
    <string name="login_mesglist">Listing the documents ...</string>
    <string name="personal_view">"Personal View Storage"</string>
    <string name="mem_used">"0MB of 100 MB used"</string>
    <string name="limit">Limit</string>
    <string name="label_sso_cookie_Based">SSO ENABLED</string>
    <string name="label_sso_authenticate_at_logon">Authenticate at Logon</string>
    <string name="label_sso_cookie_enabled">Cookie enabled</string>
    <string name="label_sso_reauthenticate_at_logon">Reauthenticate at logon</string>
    <string name="log_title">Log Settings</string>
    <string name="log_message">Are you sure, you want to enable the logs?</string>
    <string name="search_hint">Search</string>
    <string name="toggle_yes">YES</string>
    <string name="toggle_no">NO</string>
    <string name="ctb_app_settings">Application Settings</string>
    <string name="ctb_settings">Settings</string>
    <string name="collaborate">Collaborate</string>
    <string name="jam_sendtojam">Send to SAP JAM</string>
    <string name="manage_connections">"Manage Connections"</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="add_default_category">Set Default Category</string>
	<string name="menu_notification">Notifications</string>
</resources>