<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"  >
    <item android:id="@+id/ctb_overflow" android:icon="@drawable/custom_overflow" android:showAsAction="always">
        <menu>
            <item android:id="@+id/refresh_report" android:icon="@drawable/refresh_icon" android:title="@string/refresh" android:showAsAction="never"></item>
            <item android:id="@+id/addhome_report" android:icon="@drawable/add_to_home_tablet" android:title="@string/add_home" android:showAsAction="never"></item>
            <item android:id="@+id/personal_view_create" android:icon="@drawable/report_menu_personalview" android:title="@string/personal_view_create" android:showAsAction="never"></item>
            <item android:id="@+id/prompt_refresh_report" android:icon="@drawable/report_menu_refreshprompt" android:title="@string/refresh" android:showAsAction="never"></item>
            <item android:id="@+id/filter_report" android:icon="@drawable/report_menu_filter" android:title="@string/filter_menu" android:showAsAction="never"></item>
            <item android:id="@+id/report_part_filter" android:icon="@drawable/report_menu_reportpartfilter" android:title="@string/report_part_filter_menu" android:showAsAction="never"></item>
            <item android:id="@+id/email" android:icon="@drawable/report_menu_email" android:title="@string/email_menu" android:showAsAction="never"></item>
            <item android:id="@+id/info_report" android:icon="@drawable/report_menu_info" android:title="@string/info" android:showAsAction="never"></item>
            <item android:id="@+id/sections" android:icon="@drawable/report_menu_sections" android:title="@string/sections" android:showAsAction="never"></item>
        </menu>
     </item>

</menu>
  
