<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="always"
        android:title="@string/search_hint"/>
    <item
        android:id="@+id/menu_notification"
        android:title="@string/menu_notification"
        android:actionLayout="@layout/home_menu_notification_custom"
        android:showAsAction="always"
        android:visible="false"></item>
    
    <item
        android:id="@+id/menu_manage_connections"
        android:title="@string/manage_connections">
    </item>
    <item
        android:id="@+id/menu_categories"
        android:icon="@drawable/home_menu_manage_category"
        android:title="@string/manage_categories">
    </item>
    <item
        android:id="@+id/menu_add_default_category"
        android:title="@string/add_default_category">
    </item>
    <item
        android:id="@+id/menu_app_settings"
        android:title="@string/ctb_app_settings">
    </item>

</menu>