<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<!--<item android:id="@+id/menu_pin" android:title="@string/xc_pin_unpin" android:icon="@drawable/report_menu_pin_off"
		android:showAsAction="always">
	</item>-->
	<item android:id="@+id/addhome_report" android:icon="@drawable/add_to_home_tablet" android:title="@string/add_home" android:showAsAction="always"></item>
	<item android:id="@+id/info_xc_document" android:icon="@drawable/report_menu_info" android:title="@string/info" android:showAsAction="always"></item>
	<item android:id="@+id/share_report"  android:icon="@drawable/menu_more_actions_tablet" android:showAsAction="always">
	    <menu>
	      <item android:id="@+id/annotations"  android:title="@string/annotations" android:showAsAction="ifRoom"/>
	      <item android:id="@+id/email"  android:title="@string/email_menu" android:showAsAction="ifRoom"/>  
	      <item android:id="@+id/jam" android:title="@string/collaborate" android:visible="false" android:showAsAction="ifRoom" />
	    </menu>
	</item>
</menu>
