<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/ctb_overflow"
        android:icon="@drawable/custom_overflow"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/addhome_report"
                android:icon="@drawable/add_to_home_tablet"
                android:showAsAction="never"
                android:title="@string/add_home">
            </item>
            <item
                android:id="@+id/email"
                android:icon="@drawable/report_menu_email"
                android:showAsAction="never"
                android:title="@string/email_menu">
            </item>
            <item
                android:id="@+id/info_report"
                android:icon="@drawable/report_menu_info"
                android:showAsAction="never"
                android:title="@string/info">
            </item>
        </menu>
    </item>

</menu>